--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
+    "styled-components": "^3.4.9",
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
